--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -1,4 +1,4 @@
 <%= image_tag "good.png", class: "good-icon", id: "good" %>
 <span>
-  <span id='number-of-good'></span>いいね
+  <span id='number-of-good'>0</span>いいね
 </span>
