--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -1,4 +1,10 @@
-<%= image_tag "good.png", class: "good-icon", id: "good" %>
-<span>
-  <span id='number-of-good'>0</span>いいね
-</span>
+<div class="content">
+  <div class="good">
+    <%= image_tag "good.png", class: "good-icon", id: "good" %>
+  </div>
+  <div class="number-of-good">
+    <span>
+      <span id='number-of-good'>0</span>いいね
+    </span>
+  </div>
+</div>
